test/commands/scan/escaped/policy.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: test
spec:
  rules:
    - name: foo-bar-4
      assert:
        all:
        - check:
            foo:
              \(bar)\: 4
        - check:
            foo:
              \(bar)\->test:
                ($test): 4
        - check:
            foo:
              \(bar)->test\: 6
        - check:
            foo:
              \(bar)->test\->test:
                ($test): 6
        - check:
            foo:
              \~foos\:
              - 1
              - 2
              - 3
